testdata/bad/timestamp_42.ion
2004-12-11T12:10:1Z
